--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ responses = "^0.23.0"
 pytest-mock = "^3.11.0"
 sphinx = "^7.0.0"
 sphinx-rtd-theme = "^1.3.0"
+jupyter = "^1.1.1"
+load-dotenv = "^0.1.0"
 
 [tool.poetry.group.test.dependencies]
 pytest-asyncio = "^0.21.0"
