--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ responses = "^0.23.0"
 pytest-mock = "^3.11.0"
 sphinx = "^7.0.0"
 sphinx-rtd-theme = "^1.3.0"
+myst-parser = "^2.0.0"
 jupyter = "^1.1.1"
 load-dotenv = "^0.1.0"
 
@@ -74,6 +75,19 @@ exclude = '''
 )
 '''
 
+[tool.flake8]
+max-line-length = 88
+extend-ignore = ["E203", "E501", "W503", "F401", "F541"]
+exclude = [
+    ".git",
+    "__pycache__",
+    "build",
+    "dist",
+    "*.egg-info",
+    ".venv",
+    "docs/_build"
+]
+
 [tool.isort]
 profile = "black"
 multi_line_output = 3
@@ -82,18 +96,19 @@ known_first_party = ["datadis_python"]
 
 [tool.mypy]
 python_version = "3.8"
-warn_return_any = true
+warn_return_any = false
 warn_unused_configs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-warn_unreachable = true
-strict_equality = true
+disallow_untyped_defs = false
+disallow_incomplete_defs = false
+check_untyped_defs = false
+disallow_untyped_decorators = false
+no_implicit_optional = false
+warn_redundant_casts = false
+warn_unused_ignores = false
+warn_no_return = false
+warn_unreachable = false
+strict_equality = false
+ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
