--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.3"
 description = "SDK Python sencillo para la API oficial de Datadis"
 authors = ["CristianTacoronteRivero <tacoronteriverocristian@gmail.com>"]
 readme = "README.md"
+packages = [{include = "datadis_python"}]
 homepage = "https://github.com/cristiantr/datadis-python"
 repository = "https://github.com/cristiantr/datadis-python"
 documentation = "https://ctr-datadis.readthedocs.io"
