--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ sphinx-rtd-theme = "^1.3.0"
 myst-parser = "^2.0.0"
 jupyter = "^1.1.1"
 load-dotenv = "^0.1.0"
+freezegun = "^1.2.0"
 
 [tool.poetry.group.test.dependencies]
 pytest-asyncio = "^0.21.0"
