--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,10 +8,10 @@ build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
-    # You can also specify other tool versions:
-    # nodejs: "16"
-    # rust: "1.55"
-    # golang: "1.17"
+  jobs:
+    post_create_environment:
+      # Install your package to ensure imports work
+      - pip install -e .
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
@@ -23,9 +23,7 @@ formats:
   - pdf
   - epub
 
-# Optional but recommended, declare the Python requirements required
-# to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+# Python requirements for building documentation
 python:
   install:
     - requirements: docs/requirements.txt
