docs: Enhance Datadis API Client and Models with Detailed Documentation and New Features
- Updated the DatadisClientV2 class to include new parameters for authorized NIF in various methods (get_supplies, get_distributors, get_contract_detail, get_consumption, get_max_power, get_reactive_data).
- Improved docstrings across the client methods to provide clearer descriptions and parameter details.
- Added a new ReactiveResponse model to encapsulate the response structure for reactive data.
- Enhanced existing models (ConsumptionData, ContractData, MaxPowerData, etc.) with detailed parameter descriptions.
- Updated exception handling in the HTTPClient class for better error reporting.
- Improved validation functions with detailed descriptions of valid values and error handling.
- Added typing stubs for requests to improve type checking in development.
- Updated poetry.lock and pyproject.toml to include new dependencies and ensure compatibility.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ myst-parser = "^2.0.0"
 jupyter = "^1.1.1"
 load-dotenv = "^0.1.0"
 freezegun = "^1.2.0"
+types-requests = "<2.32"
 
 [tool.poetry.group.test.dependencies]
 pytest-asyncio = "^0.21.0"
