--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -1,5 +1,10 @@
 name: Auto Publish on Main Push
 
+permissions:
+  contents: write
+  packages: write
+  pull-requests: write
+
 on:
   push:
     branches: [ main ]
