fix: update workflow triggers to include changelog and workflow changes

--- a/.github/workflows/auto-publish.yml
+++ b/.github/workflows/auto-publish.yml
@@ -13,6 +13,8 @@ on:
       - 'pyproject.toml'
       - 'datadis_python/**'
       - 'README.md'
+      - 'CHANGELOG.md'
+      - '.github/workflows/**'
 
   # También permite ejecución manual
   workflow_dispatch:
