fix: actualizar pyproject.toml para incluir la dependencia twine en la versión 5.0.0

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,9 @@
 # Directorios de tests
 testpaths = tests
 
+# Ignorar directorios de desarrollo
+norecursedirs = worktree* .git .tox dist build *.egg
+
 # Patrones de archivos de test
 python_files = test_*.py
 python_classes = Test*
