--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ load-dotenv = "^0.1.0"
 freezegun = "^1.2.0"
 types-requests = "<2.32"
 twine = "^5.0.0"
+ipykernel = "^6.30.1"
 
 [tool.poetry.group.test.dependencies]
 pytest-asyncio = "^0.21.0"
