--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ pydantic = "^2.0.0"
 python-dateutil = "^2.8.0"
 typing-extensions = {version = "^4.0.0", python = "<3.10"}
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 black = "^23.0.0"
@@ -48,8 +48,6 @@ load-dotenv = "^0.1.0"
 freezegun = "^1.2.0"
 types-requests = "<2.32"
 twine = "^5.0.0"
-
-[tool.poetry.group.test.dependencies]
 pytest-asyncio = "^0.21.0"
 httpx = "^0.24.0"
 
